Adds missing data to swagger page.
